# kaggle

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  eda.ipynb  notes.md  profile_run.py  pyproject.toml  test0.ipynb
.github/: CODEOWNERS
.github/workflows/: cicd.yaml
mammography/: compress.sh  make_dataset.sh  preprocess_images.py
mammography/config/: submit.yaml  train.yaml
mammography/config/dev/: profile.yaml  submit.yaml
mammography/kernels/: extract_dicom_metadata.py  inspect.py
mammography/kernels/move/: kernel-metadata.json  mammography-move.ipynb
mammography/kernels/submit/: kernel-metadata.json  submit.ipynb  submit.py
mammography/kernels/train/: kernel-metadata.json  train.ipynb
mammography/requirements/: dev.in  dev.txt  dicom.in  kaggle.in  main.in  main.txt  train.in
mammography/src/: data.py  data2.py  dicomsdl.py  extract_dicom_metadata.py  loss.py  metrics.py  model.py  prep_meta.py  preprocess_images.py  ptl_patches.py  sampler.py  submit.py  train.py  utils.py
mammography/src/data/: datamodule.py  dataset.py  dicom.py  extract_dicom_metadata.py  inspect_shapes.py  metadata.py  preprocess_images.py  transforms.py  utils.py
mammography/src/model/: lightning_module.py  modules.py  utils.py
mammography/tests/: test_data2.py  test_metrics.py  test_model.py  test_sampler.py
mammography/tests/data/: test_dataset.py
mayo_clinic_strip_ai/: README.md  data.py  dataset.py  download.sh  downsample.py  eda.ipynb  find_ROIs.py  make_thumbnails.py  metadata.py  metrics.py  model.py  stain.py  stain_vectors.json  test0.ipynb  train.py  train_config.yaml  utils.py  viz.py
mayo_clinic_strip_ai/config/: find_ROIs.yaml  make_thumbnails.yaml  train.yaml
mayo_clinic_strip_ai/data/: metadata.py  process.py
mayo_clinic_strip_ai/data/ROIs/: dataset-metadata.json
mayo_clinic_strip_ai/eda/: README.md
mayo_clinic_strip_ai/requirements/: dev.in  dev.txt  main.txt
mayo_clinic_strip_ai/tests/: data_test.py  dataset_test.py  models_test.py
requirements/: dev.in  dev.txt  eda.in  eda.txt  main.in  main.txt  train.in  train.txt
tests/data/: test_transforms.py
