[project]
name = "kaggle"
description = "Kaggle competition monorepo"
readme = "README.md"
python = "^3.10"

[tool.flake8]
max-line-length = 120
max-complexity = 10

[tool.isort]
profile = "black"
py_version = "310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
implicit_reexport = true
show_error_codes = true
strict = false
exclude = "venv"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest]
addopts = ["-s", "--typeguard-packages=mayo_clinic_strip_ai,mammography,tests"]
log_cli = true
env = ["WANDB_MODE = offline"]
